# Implementing-MoE-Architecture-Operators-on-CANN-Platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  build.sh  build_cpu_sim.sh  requirements.txt  setup.py
cmake/: config.cmake
cmake/util/: utils.cmake
framework/: CMakeLists.txt
op_host/: CMakeLists.txt  moe_ops.cpp  moe_tiling.h
op_kernel/: CMakeLists.txt  moe_combine.cpp  moe_expert_ffn.cpp  moe_routing.cpp  op_info.json
src/: __init__.py
src/cann_ops/: __init__.py  all_to_all.py  fused_moe.py  switch_router.py
src/examples/: __init__.py  advanced_moe.py  basic_moe.py
src/moe/: __init__.py  experts.py  layers.py  load_balance.py  router.py  utils.py
tests/: CMakeLists.txt  __init__.py  moe_cpu_sim.cpp  test_experts.py  test_moe.cpp  test_moe_layer.py  test_router.py
